[frontend/backend] Reorganize admin pages into tabs